# rpihome

./: .gitattributes  .gitignore  .travis.yml  LICENSE.txt  README.md
rpiHomeApp/: .cproject  .gitignore  .project  CMakeLists.txt  rpiHome.h.in  rpihome.rexpfd
rpiHomeApp/cmake/Modules/: Findmysqlclient.cmake  FindwiringPi.cmake  GetCompilerVersion.cmake  ShowConfig.cmake
rpiHomeApp/docs/: get_modules.sh  req.txt
rpiHomeApp/source/rpiHomeApp/: rpiHome.cpp  rpiHome.h  rpiHomeApp.cpp
rpiHomeApp/source/tests/daemon/: daemon.c
rpiHomeWWW/: .project  config.php  db.php  functions.php  get_config.php  get_log.php  get_pins.php  get_status.php  index.php  log.php  pins.php  set_config_vars.php
rpiHomeWWW/charts/: chart_temp.php  chart_temp_data.php  readme_charts.txt
rpiHomeWWW/charts/js/: charts.js
rpiHomeWWW/db/: rpihome.sql  rpihome_last.sql  trash.sql.txt
rpiHomeWWW/js/: scripts.js
rpiHomeWWW/styles/: rpihome.css
rpiHomeWWW/webPHPtest/: index.php
